# foak-backend

./: Dockerfile  README.md  ai.py  pyproject.toml  site_analysis_results_8_23_25.md  test_db_connection.py
app/: database.py  db_tools.py  main.py  models.py
app/data/: analyzed_sites.json  manual_data.json  sites_input.json
